--- a/fineyun.wcs/fineyun.wcs/fineyun.wcs.csproj
+++ b/fineyun.wcs/fineyun.wcs/fineyun.wcs.csproj
@@ -25,10 +25,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\fineyun.common\fineyun.common.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
       <Content Update="wwwroot\www\lib\axios.min.js">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
@@ -65,6 +61,10 @@
       <Content Update="wwwroot\www\favicon.ico">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\fineyun.wcs.common\fineyun.wcs.common.csproj" />
     </ItemGroup>
 
 </Project>
