使用老版本的workflow

--- a/fineyun.wcs/fineyun.wcs/appsettings.json
+++ b/fineyun.wcs/fineyun.wcs/appsettings.json
@@ -1,6 +1,9 @@
 {
 	"app": {
-		"enableswagger": 1
+		"enableswagger": 1,
+		"db": {
+			"connstr": "server=127.0.0.1;userid=root;password=123456;database=wcs_main;port=3306;Charset=utf8;Allow Zero Datetime=True; Pooling=true; Max Pool Size=256;"
+		}
 	},
 	"AllowedHosts": "*"
 }
