--- a/fineyun.wcs/fineyun.wcs.algo/fineyun.wcs.algo.csproj
+++ b/fineyun.wcs/fineyun.wcs.algo/fineyun.wcs.algo.csproj
@@ -3,11 +3,11 @@
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>disable</Nullable>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+      <PackageReference Include="Autofac" Version="6.5.0" />
     </ItemGroup>
 
 </Project>
