--- a/fineyun.wcs/fineyun.wcs.device/fineyun.wcs.device.csproj
+++ b/fineyun.wcs/fineyun.wcs.device/fineyun.wcs.device.csproj
@@ -19,4 +19,11 @@
       <PackageReference Include="Autofac" Version="6.5.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="agv" />
+      <Folder Include="camera" />
+      <Folder Include="diverter" />
+      <Folder Include="rgv" />
+    </ItemGroup>
+
 </Project>
