--- a/fineyun.wcs/fineyun.wcs.support/fineyun.wcs.support.csproj
+++ b/fineyun.wcs/fineyun.wcs.support/fineyun.wcs.support.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -11,6 +11,7 @@
       <PackageReference Include="FreeSql.Provider.MySqlConnector" Version="3.2.685" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
       <PackageReference Include="NLog" Version="5.1.0" />
+      <PackageReference Include="WorkflowCore" Version="3.6.5" />
     </ItemGroup>
 
     <ItemGroup>
