--- a/fineyun.wcs/fineyun.wcs.support/fineyun.wcs.support.csproj
+++ b/fineyun.wcs/fineyun.wcs.support/fineyun.wcs.support.csproj
@@ -10,8 +10,9 @@
       <PackageReference Include="Autofac" Version="6.5.0" />
       <PackageReference Include="FreeSql.Provider.MySqlConnector" Version="3.2.685" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
-      <PackageReference Include="NLog" Version="5.1.0" />
-      <PackageReference Include="WorkflowCore" Version="3.6.5" />
+      <PackageReference Include="NLog" Version="5.1.1" />
+      <PackageReference Include="WorkflowCore" Version="3.8.1" />
+      <PackageReference Include="WorkflowCore.Persistence.Freesql" Version="1.0.0" />
     </ItemGroup>
 
     <ItemGroup>
