nuget package upgrade

--- a/fineyun.wcs/fineyun.wcs.support/fineyun.wcs.support.csproj
+++ b/fineyun.wcs/fineyun.wcs.support/fineyun.wcs.support.csproj
@@ -8,11 +8,16 @@
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="6.5.0" />
-      <PackageReference Include="FreeSql.Provider.MySqlConnector" Version="3.2.685" />
+      <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+      <PackageReference Include="FreeSql.Provider.MySqlConnector" Version="3.2.687" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
-      <PackageReference Include="NLog" Version="5.1.1" />
+      <PackageReference Include="NLog" Version="5.1.2" />
       <PackageReference Include="WorkflowCore" Version="3.8.1" />
       <PackageReference Include="WorkflowCore.Persistence.Freesql" Version="1.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 
     <ItemGroup>
